Fix scroll on mobile.

--- a/assets/furllery.css
+++ b/assets/furllery.css
@@ -267,6 +267,7 @@
     align-content: flex-start;
     justify-content: space-between;
 
+    overflow: auto;
     transition: all .2s;
 
     .df-furllery-panel-thumbnail {
